definitively fixed rounded corners on forms on iOS

--- a/Landing/src/sections/Contacts/Contacts.css
+++ b/Landing/src/sections/Contacts/Contacts.css
@@ -62,6 +62,7 @@
     margin: 1vw;
     width: 100%;
     box-sizing: border-box;
+    border-radius: 0!important;
  }
  .form-group__topic {
     display: flex;
